--- a/_includes/background.html
+++ b/_includes/background.html
@@ -2,25 +2,26 @@
   <div class="section__title">Background</div>
   <div class="section__content">
     <p>
-      I'm currently an Engineer at
-      <a class="underline-link" href="https://www.upstatement.com/" target="_blank">Upstatement</a> building things for the web with some awesome people. I recently graduated from
-      <a class="underline-link" href="http://www.ccis.northeastern.edu/" target="_blank">Northeastern University</a> after completing three awesome six-month co-ops at
-      <a class="underline-link" href="https://us.mullenlowe.com/" target="_blank">MullenLowe U.S.</a>,
-      <a class="underline-link" href="https://starry.com/" target="_blank">Starry</a>, and
-      <a class="underline-link" href="https://www.apple.com/music/" target="_blank">Apple Music</a>.
+      I'm currently pursuing Master's in Computer Science at 
+      <a class="underline-link" href="https://www.usc.edu/" target="_blank">University of Southern California</a>, 
+      focusing on software engineering and data analytics. 
+      Before this, I earned my Bachelor's degree from Amrita Vishwa Vidyapeetham, where I excelled academically. 
+      My professional journey includes impactful roles at 
+      <a class="underline-link" href="https://www.vmware.com/" target="_blank">VMware</a> and 
+      <a class="underline-link" href="https://www.cdot.in/" target="_blank">CDOT</a>, 
+      where I developed innovative software solutions and received accolades for my work.
+      </p>
+
+    <p>
+      As a software engineer, I'm passionate about creating applications that not only function efficiently under the hood 
+      but also deliver user-friendly experiences. I aim to bridge the technical and user-centric aspects of software development, 
+      ensuring that my projects are both technically robust and aesthetically pleasing.
     </p>
 
     <p>
-      As a software engineer, I enjoy bridging the gap between engineering and design &mdash; combining my technical knowledge
-      with my keen eye for design to create a beautiful product. My goal is to always build applications that are scalable
-      and efficient under the hood while providing engaging, pixel-perfect user experiences.
+      <strong>When I'm not in front of a computer screen</strong>, I'm probably playing badminton, experimenting with new recipes in the kitchen or Stargazing. 
+      Always looking to add new experiences to my life's journey.
     </p>
 
-    <p>
-      <strong>When I'm not in front of a computer screen</strong>, I'm probably snowboarding, cruising around on my penny board,
-      or crossing off another item on my bucket list.
-    </p>
-
-    <!-- {% include employment-status.html %} -->
   </div>
 </section>
