--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -4,15 +4,14 @@
   </h1>
 
   <h2 class="intro__tagline">I'm
-    <span class="name">Brittany Chiang</span>, a design-minded front-end software engineer focused on building beautiful interfaces &amp; experiences
-    <span class="emoji technologist"></span>
+    <span class="name">Dharanidhar Reddy Yerram</span>, a CS Grad student focused on innovative software development & data analytics. Passionate about impactful tech solutions
   </h2>
 
   <h3 class="intro__contact">
     <span>Get in touch </span>
     <span class="emoji pointer"></span>
     <span>
-      <a href="mailto:brittany.chiang@gmail.com" target="_blank" class="highlight-link">brittany.chiang@gmail.com</a>
+      <a href="mailto:yerramdharanidhar@gmail.com" target="_blank" class="highlight-link">yerramdharanidhar@gmail.com</a>
     </span>
   </h3>
 </header>
