--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,21 @@
 <footer class="footer">
   <div class="footer__copyright">
     <div class="top">
-      <span>Designed &amp; Developed by</span>
+      <span>Developed by Brittany Chiang</span>
     </div>
     <div class="bottom">
-      <span>Brittany Chiang</span>
+      <span>Revised by Dharanidhar Reddy Yerram</span>
       <img class="emoji" src="{{site.baseurl}}/img/emojis/rockon.png" alt="emoji">
-      <span>2018</span>
+      <span>2024</span>
     </div>
+      <div class="top">
+        <span>Designed &amp; Developed by</span>
+      </div>
+      <div class="bottom">
+        <span>Brittany Chiang</span>
+        <img class="emoji" src="{{site.baseurl}}/img/emojis/rockon.png" alt="emoji">
+        <span>2018</span>
+      </div>
   </div>
   <div class="footer__links">
     {% for link in site.social %}
