--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,7 +1,6 @@
 <section class="section skills">
   <div class="section__title">Skills</div>
   <div class="section__content">
-    <!-- <p>I’ve picked up quite a few skills during the course of my three co-ops, and aim to improve these skills everyday. Here are a few of the technologies that I have experience with:</p> -->
     <div class="skillz">
       <div class="skillz__category">
         <div class="skillz__category__label">Languages</div>
@@ -28,9 +27,9 @@
         </ul>
       </div>
       <div class="skillz__category">
-        <div class="skillz__category__label">Design</div>
+        <div class="skillz__category__label">Technologies</div>
         <ul>
-          {% for thing in site.data.skills.design %}
+          {% for thing in site.data.skills.technologies %}
           <li class="skillz__category__item">{{thing.item}}</li>
           {% endfor %}
         </ul>
