--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,12 @@
 <footer class="footer">
   <div class="footer__copyright">
     <div class="top">
-      <span>Developed by Brittany Chiang</span>
+      <span>Developed by </span>
+      <span>Brittany Chiang</span>
     </div>
     <div class="bottom">
-      <span>Revised by Dharanidhar Reddy Yerram</span>
-      <img class="emoji" src="{{site.baseurl}}/img/emojis/rockon.png" alt="emoji">
+      <span>Revised by </span>
+      <span>Dharanidhar Reddy Yerram</span>
       <span>2024</span>
     </div>
   </div>
