--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,12 @@
 <footer class="footer">
   <div class="footer__copyright">
     <div class="top">
-      <span>Developed by </span>
+      <span>Developed by </span><br>
       <span>Brittany Chiang</span>
     </div>
     <div class="bottom">
-      <span>Revised by </span>
+      <span>Revised by </span><br>
       <span>Dharanidhar Reddy Yerram</span>
-      <span>2024</span>
     </div>
   </div>
   <div class="footer__links">
