--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -3,22 +3,24 @@
   <div class="section__content">
     <div class="project blistabloc">
       <figure class="project__pic">
-        <a href="https://blistabloc.com/" target="_blank">
+        <a href="https://stocksearch-webtech4.appspot.com/" target="_blank">
           <img src="{{site.baseurl}}/img/featured/blistabloc/blistabloc.png" alt="">
         </a>
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
-          <a href="https://blistabloc.com/" target="_blank">blistabloc</a>
+          <a href="https://stocksearch-webtech4.appspot.com/" target="_blank">Stock Search</a>
         </div>
-        <p>Custom wordpress theme built with Timber and Woocommerce for blistabloc, the only reactive shoe insert that prevents
-          blisters from forming.</p>
+        <p>A trading simulation website using Angular for the frontend, Node.js for the backend,
+          and MongoDB for data management, deployed on Google Cloud Platform (GCP).
+          It allows users to manage watchlists and execute buy/sell operations based on real-time market data.
+        </p>
       </figcaption>
     </div>
 
     <div class="project screentime">
       <figure class="project__pic phones">
-        <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">
+        <a href="https://github.com/dreddyyerram/stockSearchApp" target="_blank">
           <div class="phone">
             <img src="{{site.baseurl}}/img/featured/screentime/screentime1.png" alt="">
           </div>
@@ -32,24 +34,10 @@
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
-          <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">ScreenTime 2.0</a>
+          <a href="https://github.com/dreddyyerram/stockSearchApp" target="_blank">Stock Trade</a>
         </div>
-        <p>Starry Station feature that provided users with the ability to easily filter content, pause the internet, and even
-          create custom rules for blocking apps like Facebook and Twitter right from their phones.</p>
-      </figcaption>
-    </div>
-
-    <div class="project interventions">
-      <figure class="project__pic">
-        <a href="https://interventions.design/" target="_blank">
-          <img src="{{site.baseurl}}/img/featured/interventions/interventions.png" alt="">
-        </a>
-      </figure>
-      <figcaption class="project__caption">
-        <div class="project__name">
-          <a href="https://interventions.design/" target="_blank">Interventions</a>
-        </div>
-        <p>Interactive marketing website for Northeastern's first annual student-led design conference, Interventions.</p>
+        <p>An iOS trading simulation app using Swift for the frontend, Node.js for the backend, and MongoDB for data management.
+          It enables users to manage watchlists and execute buy/sell operations based on real-time market data.</p>
       </figcaption>
     </div>
   </div>
