Added featured project images

--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -30,6 +30,9 @@
           <div class="phone">
             <img src="{{site.baseurl}}/img/featured/screentime/screentime4.png" alt="">
           </div>
+          <div class="phone">
+            <img src="{{site.baseurl}}/img/featured/screentime/screentime1.png" alt="">
+          </div>
         </a>
       </figure>
       <figcaption class="project__caption">
