--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -22,16 +22,19 @@
       <figure class="project__pic phones">
         <a href="https://github.com/dreddyyerram/stockSearchApp" target="_blank">
           <div class="phone">
-            <img src="{{site.baseurl}}/img/featured/screentime/screentime1.png" alt="">
+            <img src="{{site.baseurl}}/img/featured/Stocksearchapp/homepage.png" alt="">
           </div>
           <div class="phone">
-            <img src="{{site.baseurl}}/img/featured/screentime/screentime3.png" alt="">
+            <img src="{{site.baseurl}}/img/featured/Stocksearchapp/stock_page.png" alt="">
           </div>
           <div class="phone">
-            <img src="{{site.baseurl}}/img/featured/screentime/screentime4.png" alt="">
+            <img src="{{site.baseurl}}/img/featured/Stocksearchapp/trade_page.png" alt="">
           </div>
           <div class="phone">
-            <img src="{{site.baseurl}}/img/featured/screentime/screentime1.png" alt="">
+            <img src="{{site.baseurl}}/img/featured/Stocksearchapp/news_page.png" alt="">
+          </div>
+          <div class="phone">
+            <img src="{{site.baseurl}}/img/featured/Stocksearchapp/graphs.png" alt="">
           </div>
         </a>
       </figure>
